# LKHcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.pl  tasks.csv
STTSP/: README.txt
STTSP/INSTANCES/: STSP_100-1over3.sttsp  STSP_100-2over3.sttsp  STSP_125-1over3.sttsp  STSP_125-2over3.sttsp  STSP_150-1over3.sttsp  STSP_150-2over3.sttsp  STSP_175-1over3.sttsp  STSP_175-2over3.sttsp  STSP_200-1over3.sttsp  STSP_200-2over3.sttsp  STSP_225-1over3.sttsp  STSP_225-2over3.sttsp  STSP_250-1over3.sttsp  STSP_250-2over3.sttsp  STSP_300-1over3.sttsp  STSP_300-2over3.sttsp  STSP_50-1over3.sttsp  STSP_50-2over3.sttsp  STSP_75-1over3.sttsp  STSP_75-2over3.sttsp  euroroad_05percent.sttsp  euroroad_10percent.sttsp  euroroad_15percent.sttsp  euroroad_20percent.sttsp  rome99_05percent.sttsp  rome99_10percent.sttsp  rome99_15percent.sttsp  tech-routers_05percent.sttsp  tech-routers_10percent.sttsp  tech-routers_15percent.sttsp
STTSP/PARAM/: STSP_100-1over3_15ALPH.json  STSP_100-1over3_25.json  STSP_100-1over3_35.json  STSP_100-2over3_12.json  STSP_100-2over3_22.json  STSP_100-2over3_32.json  STSP_125-1over3_13.json  STSP_125-1over3_23.json  STSP_125-1over3_33.json  STSP_125-2over3_14ALPH.json  STSP_125-2over3_24.json  STSP_125-2over3_34.json  STSP_150-1over3_15.json  STSP_150-1over3_25.json  STSP_150-1over3_35.json  STSP_150-2over3_12ALPH.json  STSP_150-2over3_22.json  STSP_150-2over3_32.json  STSP_175-1over3_13.json  STSP_175-1over3_23.json  STSP_175-1over3_33.json  STSP_175-2over3_14.json  STSP_175-2over3_24.json  STSP_175-2over3_34.json  STSP_200-1over3_15.json  STSP_200-1over3_25.json  STSP_200-1over3_35.json  STSP_200-2over3_15.json  STSP_200-2over3_25.json  STSP_200-2over3_35.json  STSP_225-1over3_15.json  STSP_225-1over3_25.json  STSP_225-1over3_35.json  STSP_225-2over3_15.json  STSP_225-2over3_25.json  STSP_225-2over3_35.json  STSP_250-1over3_15.json  STSP_250-1over3_25.json  STSP_250-1over3_35.json  STSP_250-2over3_15.json  (+50 more)
STTSP/TOURS/: STSP_100-1over3.1.5.919.tour  STSP_100-1over3.2.5.919.tour  STSP_100-1over3.3.5.919.tour  STSP_100-2over3.1.2.1193.tour  STSP_100-2over3.2.2.1193.tour  STSP_100-2over3.3.2.1193.tour  STSP_125-1over3.1.3.1143.tour  STSP_125-1over3.2.3.1143.tour  STSP_125-1over3.3.3.1143.tour  STSP_125-2over3.1.4.1416.tour  STSP_125-2over3.2.4.1416.tour  STSP_125-2over3.2.4.1417.tour  STSP_125-2over3.3.4.1416.tour  STSP_150-1over3.1.5.1105.tour  STSP_150-1over3.2.5.1105.tour  STSP_150-1over3.3.5.1105.tour  STSP_150-2over3.1.2.1545.tour  STSP_150-2over3.2.2.1545.tour  STSP_150-2over3.3.2.1545.tour  STSP_175-1over3.1.3.1272.tour  STSP_175-1over3.2.3.1272.tour  STSP_175-1over3.3.3.1272.tour  STSP_175-2over3.1.4.1645.tour  STSP_175-2over3.2.4.1645.tour  STSP_175-2over3.3.4.1645.tour  STSP_200-1over3.1.5.1295.tour  STSP_200-1over3.2.5.1295.tour  STSP_200-1over3.3.5.1295.tour  STSP_200-2over3.1.5.1845.tour  STSP_200-2over3.2.5.1845.tour  STSP_200-2over3.3.5.1845.tour  STSP_225-1over3.1.5.1377.tour  STSP_225-1over3.2.5.1377.tour  STSP_225-1over3.3.5.1377.tour  STSP_225-2over3.1.5.1901.tour  STSP_225-2over3.2.5.1901.tour  STSP_225-2over3.3.5.1901.tour  STSP_250-1over3.1.5.1487.tour  STSP_250-1over3.2.5.1487.tour  STSP_250-1over3.3.5.1487.tour  (+51 more)
TSP/INSTANCES/: tiny4.tsp
TSP/PARAM/: gr96_12.json  gr96_22.json  gr96_32.json  gr96_33.json  gr96_34.json  gr96_35.json  pla7397.json  pr2392.json  tiny4.json
TSP/TOURS/: gr96_12.55209.tour  gr96_22.55209.tour  gr96_32.55209.tour  gr96_33.55209.tour  gr96_34.55209.tour  gr96_35.55209.tour  pla7397.23333629.tour  pla7397.23360575.tour  pr2392.378105.tour  tiny4.3.tour
include/: ActiveNodeQueue.h  C.h  Distance.h  Exclude.h  FatalExitAppender.h  FileLineFormatter.h  Function.h  Graph.h  HashTable.h  Improvement.h  Initializer.h  LKH.h  LKHcpp.h  Move.h  Normalize.h  STTSP2TSP.h  StatusReport.h  SwapStack.h  Tour.h  Tree.h  type.h
include/candidate/: CandidateFuncs.h  CandidateSet.h  POpMUSICCandidateSetCreator.h
include/data/: Candidate.h  Context.h  Coordinate.h  Node.h  NodeSet.h  Param.h  ParamReader.h  Problem.h  ProblemReader.h  ProblemType.h  TSPLIB.h  TSPLIBReader.h  Tour.h  TreeNode.h
include/utils/: Dijkstra.h  EnumConversion.h  GetTime.h  Heap.h  Random.h  RingPair.h
include/variant/: EdgeDataEncoder.h  NodeCoordEncoder.h  STTSPVariant.h  TSPLIBVariant.h  VariantBase.h  VariantFactory.h
script/: coverage.sh
src/: Ascent.cpp  Between.cpp  Between_SL.cpp  Between_SSL.cpp  BridgeGain.cpp  C.cpp  ChooseInitialTour.cpp  Connect.cpp  Distance.cpp  Excludable.cpp  Exclude.cpp  ExtractFinalTour.cpp  FindTour.cpp  Flip.cpp  Gain23.cpp  Improvement.cpp  LKH.cpp  LKHcpp.cpp  LKHmain.cpp  LinKernighan.cpp  MergeWithTourIPT.cpp  Minimum1TreeCost.cpp  MinimumSpanningTree.cpp  NormalizeNodeList.cpp  NormalizeSegmentList.cpp  OrderCandidateSet.cpp  ReadParameters.cpp  RecordBetterTour.cpp  RestoreTour.cpp  STTSP2TSP.cpp  SegmentSize.cpp  StatusReport.cpp  StoreTour.cpp  SymmetrizeCandidateSet.cpp  WriteTour.cpp  main.c  main.cpp
src/candidate/: AddCandidate.cpp  AdjustCandidateSet.cpp  CandidateReport.cpp  CreateCandidateSet.cpp  GenerateCandidates.cpp  OrderCandidateSet.cpp  POpMUSICCandidateSetCreator.cpp  ResetCandidateSet.cpp  TrimCandidateSet.cpp
src/data/: Context.cpp  Param.cpp  ParamReader.cpp  Problem.cpp  ProblemReader.cpp  TSPLIBReader.cpp
src/move/: Best2OptMove.cpp  Best3OptMove.cpp  Best4OptMove.cpp  Best5OptMove.cpp  Make2OptMove.cpp  Make3OptMove.cpp  Make4OptMove.cpp  Make5OptMove.cpp
src/utils/: Random.cpp
src/variant/: EdgeDataEncoder.cpp  NodeCoordEncoder.cpp  STTSPVariant.cpp
